--- a/Delta/CMakeLists.txt
+++ b/Delta/CMakeLists.txt
@@ -16,12 +16,12 @@ if (NOT CONFIGURED_ONCE)
 endif()
 
 
-include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/CLASS ${PROJECT_SOURCE_DIR}/CRC ${PROJECT_SOURCE_DIR}/UTHASH)
+include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/CLASS ${PROJECT_SOURCE_DIR}/CRC ${PROJECT_SOURCE_DIR}/UTHASH ${PROJECT_SOURCE_DIR}/MD5)
 add_subdirectory(CLASS)
 add_subdirectory(CRC)
-
+add_subdirectory(MD5)
 add_library(coder ENCODER.c DECODER.c)
 
 add_executable(TPDelta main.c)
-target_link_libraries(coder PRIVATE class crc)
-target_link_libraries(TPDelta PRIVATE class crc coder)
+target_link_libraries(coder PRIVATE class crc md5)
+target_link_libraries(TPDelta PRIVATE class crc coder md5)
